Fix for control bar being cut off on small devices

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ body {
 #controlBar {
   display: flex;
   flex-wrap: wrap;
-  padding: 0.5rem 1rem;
   gap: 0.2rem;
   box-sizing: border-box;
   width: 100%;
@@ -334,24 +333,5 @@ input[type="range"].range-accent-color::-moz-range-thumb {
   #writingArea,
   #markdownOutput {
     padding: 2vh 1rem;
-  }
-
-  #settingsPanel,
-  #markdownShortcutsPanel,
-  #pagesPanel {
-    width: 100%;
-    right: -100%;
-    padding: 1rem;
-    left: 0;
-  }
-
-  #settingsPanel.open,
-  #markdownShortcutsPanel.open,
-  #pagesPanel {
-    right: 0;
-  }
-
-  #pagesPanel.open {
-    left: 0;
   }
 }
